--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
         <div class = "header">
 
-            <a href= "home.html"><img src= "4.png" class = "logo" alt =""></a>
+            <a href= "index.html"><img src= "4.png" class = "logo" alt =""></a>
             <ul class= "nav">
-              <li><a  class = "active" href="home.html">HOME  </a></li>
+              <li><a  class = "active" href="index.html">HOME  </a></li>
               <li><a href = "driver.html">FOR DRIVERS  </a></li>
               <li><a href = "ad.html">FOR ADVERTISERS </a></li>
               <li><a href = "brand.html">BRANDS </a></li>
